--- a/amthuc.html
+++ b/amthuc.html
@@ -11,9 +11,9 @@
         <h1>Chủ đề ẩm thực</h1>
         <nav>
             <ul>
-                <li><a class="active" href="index.html">Trang chủ</a></li>
-                <li><a href="recipes.html">Công thức nấu ăn</a></li>
-                <li><a href="contact.html">Liên hệ</a></li>
+                <li><a class="active" href="amthuc.html">Trang chủ</a></li>
+                <li><a href="cong thuc.html">Công thức nấu ăn</a></li>
+                <li><a href="lienhe.html">Liên hệ</a></li>
             </ul>
         </nav>
     </header>
@@ -21,12 +21,13 @@
     <section id="hero">
         <h2>Món ăn ngon mỗi ngày!</h2>
         <p>Khám phá các công thức nấu ăn độc đáo và các món ăn ngon từ khắp nơi trên thế giới.</p>
-        <a href="recipes.html" class="btn">Xem công thức</a>
+        <a href="cong thuc.html" class="btn">Xem công thức</a>
     </section>
 
-   
+    
     <footer>
         <p>&copy; 2023 Chủ đề ẩm thực. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
